--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .header{
     background: rgba(229, 84, 115, 0.10);
+    width: 100%;
 
 }
 
@@ -32,7 +33,7 @@ margin-top: 5px;
 .main{
     display: flex;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 200px;
     border-radius: 8px;
 background: rgba(229, 84, 115, 0.05);
 }
@@ -61,4 +62,143 @@ margin-top: 5px;
     height: 90px;
     margin-left: 250px;
     gap: 10px;
+}
+.in{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+    height: 200px;
+    width: 500px;
+    margin: 50px;
+    gap: 5px;
+    
+}
+.btn3{
+    background-color: palevioletred;
+    color: white;
+    border: none;
+padding: 10px;
+margin-bottom: 190px;
+border-radius: 5px;
+align-items: center;
+}
+.inp{
+    padding: 10px;
+    margin-bottom: 190px;
+}
+.main3{
+    background-image: url("images/Rectangle 9.png");
+    margin-top: 50px;
+    height: 250px;
+
+   width: 550px;
+   margin-left: 100px;
+   padding-right: 90px;
+
+
+}
+.main-text2{
+    text-align: center;
+}
+.mt{
+    padding-top: 60px;
+}
+.footer{
+    text-align: center;
+    background-color: gray;
+    height: 150px;
+}
+.heading{
+    margin-top: 40px;
+    padding-top: 60px; */
+}
+.mt4{
+    text-align: center;
+    margin-top: 70px;
+}
+.pic4{
+    margin-top: 30px;
+    display: flex;
+    width: 300px;
+    height: 90px;
+    padding-left: 150px;
+    gap: 70px;
+    text-decoration: underline;
+}
+.p1{
+    border-radius: 300px 300px 0px 0px;
+background: rgba(167, 33, 98, 0.15);
+    width: 140px;
+    padding-top: 18px;
+    
+    border-width: 7000px;
+}
+.p2{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    width: 140px;
+    padding-top: 70px;
+}
+.p3{
+    border-radius: 300px 300px 0px 0px;
+background: rgba(71, 125, 17, 0.15);
+width: 140px;
+border-width: 900px;
+}
+.p4{
+    margin-top: 250px;
+    padding-left: 100px;
+    width: 250px;
+}
+.ps6{
+    padding-left: 90px;
+}
+.main5{
+    display: flex;
+    gap: 50px;
+    padding-left: 50px;
+    margin: 80px;
+    border-radius: 8px;
+background: rgba(39, 39, 39, 0.05);
+padding: 50px;
+pa
+}
+.testimonials{
+    padding: 40px 0;
+   background-color: #f1f1f1;
+   color: #434343;
+   text-align: center;
+}
+.inner{
+    width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 20px;
+}
+.border{
+    width:160px ;
+    height: 5px;
+    background-color:#6ab04c;
+    margin-top: 26px auto;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.col{
+    flex: 33.33% ;
+    max-width: 33.33%;
+    box-sizing: border-box;
+    padding: 15px;
+}
+.testimonial{
+    background-color: #fff;
+    padding: 30px;
+}
+.testimonial img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
