--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     margin-top: 40px;
     padding-left: 30px;
     width: 100%;
+    position: relative;
 }
 .pic1{
     width: 200px;
@@ -112,7 +113,7 @@ align-items: center;
 }
 .heading{
     margin-top: 40px;
-    padding-top: 60px; */
+    padding-top: 60px;
 }
 .mt4{
     text-align: center;
@@ -163,7 +164,6 @@ border-width: 900px;
     border-radius: 8px;
 background: rgba(39, 39, 39, 0.05);
 padding: 50px;
-pa
 }
 .testimonials{
     padding: 40px 0;
@@ -198,8 +198,21 @@ pa
     background-color: #fff;
     padding: 30px;
 }
+
 .testimonial img{
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+.name{
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: 20px 0;
+}
+.starts{
+    color: #6ab04c;
+    margin-bottom: 20px;
+}
+.tes{
+    display: flex;
 }
